# WebAgentic-mcp-WebAnalyzer

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README-ADVANCED.md  README.ko.md  README.md  REMOTE_DEPLOYMENT_GUIDE.md  UPGRADE_SUMMARY.md  architecture.md  claude-desktop-config-alternative.json  claude-desktop-config.json  cursor-settings.json  dist-info.json  docker-compose.yml  nginx.conf  package.json  pycharm-mcp-config.xml  pyproject.toml  quick-start.md  smithery.json  smithery.yaml
app/: main.py
app/api/: auth.py  mcp.py
app/core/: config.py  redis.py  security.py
app/models/: mcp_models.py
app/tools/: extract_url.py  summary_url.py
data/: README.md
deployment/: .env.prod  docker-compose.prod.yml
deployment/kubernetes/: api-server.yaml  configmap.yaml  ingress.yaml  namespace.yaml  redis.yaml  worker.yaml
deployment/scripts/: deploy.sh
docs/: README.md
install-guides/: CLAUDE_DESKTOP.md  CURSOR.md  PYCHARM.md
mcp-configs/: claude-desktop-remote.json  cursor-remote.json
mcp_webanalyzer/: __init__.py  api_server.py  config.py  external_apis.py  mcp_client.py  resources.py  server.py  worker.py
mcp_webanalyzer/utils/: __init__.py  auth.py  cache.py  monitoring.py
scripts/: build.js
tests/: __init__.py  conftest.py  test_api_server.py  test_mcp_client.py  test_server.py  test_utils.py  test_worker.py
web_analyzer_mcp/: __init__.py  rag_processor.py  server.py  web_extractor.py
