[project]
name = "web-analyzer-mcp"
version = "0.1.0"
description = "A powerful MCP server for web content analysis and RAG"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kimdonghwi94", email = "kimdonghwi94@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "html2text>=2020.1.16",
    "markdownify>=0.11.6",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kimdonghwi94/web-analyzer-mcp"
Repository = "https://github.com/kimdonghwi94/web-analyzer-mcp"
Issues = "https://github.com/kimdonghwi94/web-analyzer-mcp/issues"

[project.scripts]
mcp-webanalyzer = "web_analyzer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]